--- a/ApiGateway/src/main/resources/application.yml
+++ b/ApiGateway/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8888
+  port: 8080
 
 spring:
   application:
@@ -17,14 +17,32 @@ spring:
               uri: lb://account-service
               predicates:
                 - Path=/api/accounts/**
+              filters:
+                - RewritePath=/api/accounts/(?<segment>.*), /$\{segment}
             - id: order-service
               uri: lb://order-service
               predicates:
                 - Path=/api/orders/**
+              filters:
+                - RewritePath=/api/orders/(?<segment>.*), /$\{segment}
             - id: orchid-service
               uri: lb://orchid-service
               predicates:
                 - Path=/api/orchids/**
+              filters:
+                - RewritePath=/api/orchids/(?<segment>.*), /$\{segment}
+
+springdoc:
+  swagger-ui:
+    urls:
+      - name: account-service
+        url: /account-service/v3/api-docs
+
+      - name: orchid-service
+        url: /orchid-service/v3/api-docs
+
+      - name: order-service
+        url: /order-service/v3/api-docs
 
 eureka:
   client:
@@ -44,4 +62,3 @@ management:
 logging:
   level:
     org.springframework.cloud.gateway: DEBUG
-    org.springframework.cloud.loadbalancer: DEBUG
