--- a/EurukaService/pom.xml
+++ b/EurukaService/pom.xml
@@ -8,28 +8,16 @@
         <version>3.4.4</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>exe2.learningapp</groupId>
-    <artifactId>ErukaService</artifactId>
+    <groupId>exe2.mssapp</groupId>
+    <artifactId>EurukaService</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>ErukaService</name>
-    <description>ErukaService</description>
-    <url/>
-    <licenses>
-        <license/>
-    </licenses>
-    <developers>
-        <developer/>
-    </developers>
-    <scm>
-        <connection/>
-        <developerConnection/>
-        <tag/>
-        <url/>
-    </scm>
+    <name>EurukaService</name>
+    <description>EurukaService</description>
     <properties>
         <java.version>17</java.version>
         <spring-cloud.version>2024.0.1</spring-cloud.version>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -45,6 +33,7 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -56,6 +45,7 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
     <build>
         <plugins>
             <plugin>
